src/objects/InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Charge_Description__c</fullName>
        <label>Charge Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Name__c</fullName>
        <label>Charge Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductRatePlanName__c</fullName>
        <label>ProductRatePlanName</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge_Id__c</fullName>
        <label>Product Rate Plan Charge Id</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>InvoiceItem</label>
    <nameField>
        <label>InvoiceItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InvoiceItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>